--- a/platforms/common/blueprints/gantry/theme/details.yaml
+++ b/platforms/common/blueprints/gantry/theme/details.yaml
@@ -12,7 +12,7 @@ form:
     version:
       type: input.text
       label: Version
-      default: "@version@"
+      default: "5.4.32"
 
     icon:
       type: input.text
@@ -22,7 +22,7 @@ form:
     date:
       type: input.text
       label: Release Date
-      default: "@versiondate@"
+      default: "January  2, 2020"
 
     author.name:
       type: input.text
